Updating index page for GH

--- a/web/index.html
+++ b/web/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>HomePage</title>
+<title>HomePage------ Change tobe push to GitHub</title>
 <style>
 .city {
   background-color: tomato;
